--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,27 @@
     transform: rotate(360deg);
   }
 }
+
+.arrow-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.arrow {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 20px solid #3498db;
+  z-index: -1;
+}
+.line {
+  transition: all 200ms ease;
+  height: 2px;
+  flex-grow: 1;
+  max-width: 120px;
+  background: var(--color-timeline-default);
+}
+
